test/tests/stages/11_long_integers/valid/long_expressions/simple.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  identifier(l)
  =
  const long(9223372036854775807l)
  ;
  return
  (
  identifier(l)
  -
  const long(2l)
  ==
  const long(9223372036854775805l)
  )
  ;
  }
