test/tests/stages/11_long_integers/invalid_types/conflicting_function_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
  int
  identifier(foo)
  (
  long
  identifier(a)
  )
  ;
